traces/bug_242.txt
#242
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2244: error: Deadlock
  Potential self deadlock. `CheckpointTest_MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2244:5: In method `CheckpointTest_MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart_Test::TestBody`
2242. 
2243. TEST_P(CheckpointTest, MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart) {
2244.     createManager(0);
          ^
2245.     auto& cm = *this->manager;
2246. 

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2244:5: Method call: `CheckpointTest::createManager`
2242. 
2243. TEST_P(CheckpointTest, MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart) {
2244.     createManager(0);
          ^
2245.     auto& cm = *this->manager;
2246. 

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:77:17: Method call: `CheckpointManager::registerCursorBySeqno`
75.     } else {
76.         cursor =
77.                 manager->registerCursorBySeqno("test_cursor",
                    ^
78.                                                0,
79.                                                CheckpointCursor::Droppable::Yes)

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MetaItemsSeqnoWeaklyMonotonicSetVbStateAfterStart_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
